--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -111,6 +111,26 @@ Deletes the 2nd person in the address book.
 `delete 1` +
 Deletes the 1st person in the results of the `find` command.
 
+== Deleting multiple people : `multidelete`
+
+Deletes the specified person from the address book. Irreversible. +
+Format: `multidelete INDEX1 INDEX2 INDEX3 ..... INDEXP`, where P is any integer.
+
+****
+Deletes the people at all the specified indices.
+The index refers to the index number shown in the most recent listing.
+****
+
+Examples:
+
+* `list` +
+`multidelete 2` +
+Deletes the 2nd person in the address book.
+
+* `find Betsy` +
+`multidelete 1 3` +
+Deletes the 1st and 3rd person in the results of the `find` command.
+
 == View non-private details of a person : `view`
 
 Displays the non-private details of the specified person. +
